# j2

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: checkpoint.md  continue.md  deploy.md  features-refine.md  gen-features.md  gen-tasks.md  milestone.md  next-task.md  next.md  refine-features.md  refine-tasks.md  spec-review.md  start-task.md  status.md  task-next.md  task-start.md  tasks-gen.md  tasks-refine.md  try.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.j2/: current.md  prompt.md  rules.md  runner.py  state.md
.j2/config/: settings.ros2.yaml  settings.yaml  workflow.yaml
.j2/features/: features.md
.j2/specs/: j2.md
.j2/tasks/: F01.md  F04.md  F05.md  F06.md  F08.md  F09.md  F11.md  F12.md  F14.md  F16.md  F17.md  F18.md  F19.md  F20.md  F21.md  F22.md  F23.md  F28.md
.j2/templates/: adopt.md  checkpoint.md  deploy.md  gen_tasks.md  gen_tasks.ros2.md  milestone.md  next_task.md  refine_tasks.md  run_all_tasks.md  start_task.md  status.md  try.md  update_features.md  update_tasks.md
.planner/: current.md  principles.md
.planner/features/: features.md
.planner/specs/: jacques2.md
scaffold/: CLAUDE.md  install.sh
scaffold/.j2/: runner.py
scaffold/.planner/: principles.md  runner.py
tests/: conftest.py  test_adopt.py  test_commands.py  test_milestone.py  test_runner.py  test_runner_commands.py  test_runner_core.py  test_runner_scaffold.py  test_runner_state.py  test_status.py
(+73 files in other folders)
