[project]
name = "j2"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=.j2 --cov-report=term-missing"

[tool.coverage.run]
source = [".j2"]
omit = ["tests/*", ".venv/*"]
